2005-12-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Makefile.am: removed -g from AM_C(XX)FLAGS

2005-12-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: replaced access() with Glib::file_test in wait_for_node()

2005-12-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/Win_GParted.cc: disable treeview and graphical partition display at scantime
	* src/GParted_Core.cc: fixed two (potential) problems with device detection.

2005-12-29 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/GParted_Core.cc: because lp_partition didn't get initialized the
	  libpartedscan for free space would always fail. fixed.

2005-12-28 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* replaced popen() with Glib::spawn_command_line_sync() + general
	  cleanups in the set_used_sectors() functions.

2005-12-25 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* merry christmas
	* src/GParted_Core.cc,
	  src/VBox_VisualDisk.cc,
	  src/Win_GParted.cc: cleanups
	* include/FileSystem.h,
	  src/FileSystem.cc,
	  src/ext2.cc,
	  src/ext3.cc: replaced popen() with Glib::spawn_command_line_sync()

2005-12-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* src/TreeView_Detail.cc: replaced C-style cast with static_cast
	* src/VBox_VisualDisk.cc: removed unnecessary 'int ext_length'
	
2005-12-24 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/TreeView_Detail.h,
	  src/TreeView_Detail.cc,
	  include/VBox_VisualDisk.h,
	  src/VBox_VisualDisk.cc,
	  include/Win_GParted.h,
	  src/Win_GParted.cc: emit proper signals for several events.
	* include/Partition.h,
	  src/Partition.cc: cleanups..

2005-12-22 Bart Hakvoort <hakvoort@cvs.gnome.org>

	* include/Partition.h,
	  src/Partition.cc: overloaded operator ==
	* include/VBox_VisualDisk.h,
	  src/VBox_VisualDisk.cc: rewrote the graphical partitiondisplay. It
	  now supports resizing and the extended partition is also selectable.
	  see also #312656
	* include/Win_GParted.h,
	  src/Win_GParted.cc: use the new graphical partitiondisplay.