@@ -1,3 +1,9 @@
+2005-12-30 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: replaced deprecated OptionMenu with ComboBox.
+	  also fixed some issues which arised when no devices were detected.
+
 2005-12-29 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
 	* src/Makefile.am: removed -g from AM_C(XX)FLAGS
